--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
+baseURL = 'https://Elektroenchen.github.io/kochbuch/'
+languageCode = 'de-de'
 title = 'Zimmers Kochbuch'
 theme = "PaperMod"
 
